--- a/in-browser-transpiling/src/components/preview.css
+++ b/in-browser-transpiling/src/components/preview.css
@@ -2,10 +2,12 @@
   position: relative;
   height: 100%;
   background-color: white;
+  flex-grow: 1;
 }
 
 .iframe-wrapper iframe {
   height: 100%;
+  width: 100%;
   background-color: white;
 }
 
