--- a/in-browser-transpiling/src/components/preview.css
+++ b/in-browser-transpiling/src/components/preview.css
@@ -1,30 +1,27 @@
-.iframe-wrapper {
+.preview-wrapper {
   position: relative;
   height: 100%;
-  background-color: white;
   flex-grow: 1;
 }
 
-.preview-error{
+.preview-wrapper iframe {
+  height: 100%;
+  width: 100%;
+}
+
+.preview-error {
   position: absolute;
   top: 10px;
   left: 10px;
   color: red;
 }
 
-.iframe-wrapper iframe {
-  height: 100%;
-  width: 100%;
-  background-color: white;
-}
-
-.react-draggable-transparent-selection .iframe-wrapper:after {
-  content: "";
+.react-draggable-transparent-selection .preview-wrapper:after {
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
-  left: 0;
   bottom: 0;
-  background-color: red;
-  opacity: 30%;
+  left: 0;
+  opacity: 0;
 }
